Changed threads to virtual threads